2011-11-01  Alok Priyadarshi  <alokp@chromium.org>

        Roll chromium DEPS.

        Unreviewed.

        * DEPS:

2011-11-01  Pavel Feldman  <pfeldman@google.com>

        Not reviewed: fix chromium interactive tests.

        * src/js/Tests.js:
        (.TestSuite.prototype.showPanel):

2011-10-31  Tommy Widenflycht  <tommyw@google.com>

        [Chromium] Media Stream API: add the Chromium WebKit interfaces
        https://bugs.webkit.org/show_bug.cgi?id=58550

        Adds the bridging code + the minimum amount of Web* supporting code.

        Reviewed by Darin Fisher.

        * WebKit.gyp:
        * bridge/PeerConnectionHandler.cpp: Renamed from Source/WebCore/platform/mediastream/PeerHandler.cpp.
        (WebCore::PeerConnectionHandler::create):
        (WebCore::PeerConnectionHandler::PeerConnectionHandler):
        (WebCore::PeerConnectionHandler::~PeerConnectionHandler):
        (WebCore::PeerConnectionHandler::produceInitialOffer):
        (WebCore::PeerConnectionHandler::handleInitialOffer):
        (WebCore::PeerConnectionHandler::processSDP):
        (WebCore::PeerConnectionHandler::processPendingStreams):
        (WebCore::PeerConnectionHandler::sendDataStreamMessage):
        (WebCore::PeerConnectionHandler::stop):
        * bridge/PeerConnectionHandlerInternal.cpp: Added.
        (WebCore::PeerConnectionHandlerInternal::PeerConnectionHandlerInternal):
        (WebCore::PeerConnectionHandlerInternal::~PeerConnectionHandlerInternal):
        (WebCore::PeerConnectionHandlerInternal::produceInitialOffer):
        (WebCore::PeerConnectionHandlerInternal::handleInitialOffer):
        (WebCore::PeerConnectionHandlerInternal::processSDP):
        (WebCore::PeerConnectionHandlerInternal::processPendingStreams):
        (WebCore::PeerConnectionHandlerInternal::sendDataStreamMessage):
        (WebCore::PeerConnectionHandlerInternal::stop):
        (WebCore::PeerConnectionHandlerInternal::didCompleteICEProcessing):